# langextract

./: .env  .gitignore  CONTINUITY.md  README.md  package-lock.json  package.json  runBenchmark.js  server.js
benchmark_results/: langextract_1760160773183.json  (+3 more)
python/: README.md  README.mdc  TC03_transformer.csv  Table_2-table-1.csv  app.py  dockling.py  dockling_v2.py  extract_table.py  lang_pdf.py  pyproject.toml  rag.py  requirements.txt  rotated_table.csv  rotated_table_2 2.csv  rotated_table_2.csv  table_transformer.py
python/.claude/: settings.local.json
python/data/vectors/: chroma.sqlite3
python/dataset/: accuracy_evaluator.py  complete_benchmark.py  dataset_test.py
python/notebooks/: 01_explore_and_compare.ipynb  02_table-recognition.ipynb  compare_method.ipynb  comparison_unet_vs_docling.csv  docling_eval_results.csv  docling_summary_stats.csv  img2table_eval_results.csv  img2table_final_eval.csv  rule_based_results.csv  table-recognition.ipynb  tesseract_eval_results.csv  unet_pipeline_eval_results.csv
python/rag/: app.py
python/rag/implementation/: answer_v2.py  ingest_v2.py
python/ragtab/: __init__.py  detection.py  drop.py  heuristic.py  model.py  ocr.py  pipeline.py  utils.py
python/ragtab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/scratch/: Table_1-full_content.md  sample1-table-1.csv  sample1-table-2.csv  test-full_content.md  test-table-1.csv  test-table-2.csv  test-table-3.csv  test-table-4.csv
python/table_detection/: fine_tune.py  pubtabnet.py  test_docling_pubtabnet.py  test_pdf_table.py
(+444 files in other folders)
